[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-ai-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.7.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pygame>=2.6.1",
    "torch>=2.9.1",
]

[tool.setuptools]
py-modules = ["agent", "game", "model", "helper", "snake_game_human"]
